[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/aircraft_explode_3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/aircraft_explode_1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/aircraft_explode_2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/aircraft_1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/aircraft_explode_4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/aircraft_2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sounds/bullet.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 6 ) ],
"loop": true,
"name": "Died",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "Hit"
length = 3.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 0.9, 1.3, 1.6, 1.9, 2.1, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3 )
}

[node name="Player" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
speed = 300

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -2, -60, -9, -51, -13, -37, -13, -20, -26, -5, -26, -13, -29, -17, -34, -17, -36, -13, -36, 5, -48, 15, -48, 25, -39, 25, -38, 32, -25, 32, -24, 29, -25, 25, -15, 23, -9, 31, 13, 31, 19, 21, 25, 21, 25, 27, 29, 31, 38, 31, 42, 23, 48, 23, 48, 14, 37, 4, 37, -15, 35, -17, 30, -17, 28, -14, 28, -5, 14, -21, 14, -36, 13, -44, 9, -53, 4, -60 )

[node name="BulletAddTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2

[node name="DoubleTimer" type="Timer" parent="."]
wait_time = 8.0

[node name="Sounds" type="Node" parent="."]

[node name="Bullet" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 2 )

[connection signal="timeout" from="BulletAddTimer" to="." method="_on_BulletAddTimer_timeout"]
[connection signal="timeout" from="DoubleTimer" to="." method="_on_DoubleTimer_timeout"]
